2011-10-08  Yuqiang Xian  <yuqiang.xian@intel.com>

        JSVALUE32_64 DFG JIT - Bug fixes for Branch and LogicalNot
        https://bugs.webkit.org/show_bug.cgi?id=69702

        Reviewed by Filip Pizlo.

        There are some errors in generating code for Branch and LogicalNot,
        when the operand is predicted as ObjectOrOther.

        * dfg/DFGSpeculativeJIT32_64.cpp:
        (JSC::DFG::SpeculativeJIT::compileObjectOrOtherLogicalNot):
        (JSC::DFG::SpeculativeJIT::emitObjectOrOtherBranch):

2011-10-08  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r96996.
        http://trac.webkit.org/changeset/96996
        https://bugs.webkit.org/show_bug.cgi?id=69697

        It broke all tests on the Qt bot (Requested by Ossy_night on
        #webkit).

        * API/JSCallbackFunction.cpp:
        (JSC::JSCallbackFunction::getCallDataVirtual):
        * API/JSCallbackFunction.h:
        * API/JSCallbackObject.h:
        * API/JSCallbackObjectFunctions.h:
        (JSC::::getCallDataVirtual):
        * API/JSObjectRef.cpp:
        (JSObjectIsFunction):
        (JSObjectCallAsFunction):
        * JavaScriptCore.exp:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute):
        * jit/JITStubs.cpp:
        (JSC::DEFINE_STUB_FUNCTION):
        * runtime/ArrayConstructor.cpp:
        (JSC::ArrayConstructor::getCallDataVirtual):
        * runtime/ArrayConstructor.h:
        * runtime/BooleanConstructor.cpp:
        (JSC::BooleanConstructor::getCallDataVirtual):
        * runtime/BooleanConstructor.h:
        * runtime/DateConstructor.cpp:
        (JSC::DateConstructor::getCallDataVirtual):
        * runtime/DateConstructor.h:
        * runtime/Error.cpp:
        (JSC::StrictModeTypeErrorFunction::StrictModeTypeErrorFunction):
        (JSC::StrictModeTypeErrorFunction::create):